--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,14 @@ section {
     margin-right: -50%;
     transform: translate(-50%, -50%);
 }
+
+.button {
+    background-color: #04AA6D; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
