--- a/src/sala/syles.css
+++ b/src/sala/syles.css
@@ -52,12 +52,16 @@ video {
     }
 }
 
-.wrapper {
-    position: relative;
+.gameFrame {
+    height: 600px; 
+    padding: 20px;
+    /* Add scrollbars if content exceeds height */
+    /* overflow: auto;  */
 }
 
-/* #video {
-    position: absolute;
-    top: 0;
-    right: 0;
-  } */
+.webcamFrame {
+    background: #333; /* Example background color for the menu */
+    color: #fff; /* Example text color for the menu */
+    height: 150px; /* Set the height of the menu */
+    padding: 20px;
+}
